crates/sdk/tests/macros/error_init_with_self.stderr
error: (calimero)> an initializer, by definition, has no `self` to reference
  --> tests/macros/error_init_with_self.rs:11:17
   |
11 |     pub fn init(&self) -> Self {
   |                 ^

error[E0277]: (calimero)> no method named `#[app::init]` found for type `MyState`
 --> tests/macros/error_init_with_self.rs:6:8
  |
6 | struct MyState;
  |        ^^^^^^^ add an `#[app::init]` method to this type
  |
  = help: the trait `AppStateInit` is not implemented for `MyState`
note: required by a bound in `AppState`
 --> src/state.rs
  |
  | pub trait AppState: BorshSerialize + BorshDeserialize + AppStateInit {
  |                                                         ^^^^^^^^^^^^ required by this bound in `AppState`
